--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: "Ryan O'Connell's Projects"
 author:
   name: "Ryan O'Connell"
-  email: ryan.oconnell416@gmail.com
+  email: ryan.m.oconnell@outlook.com
 description:
 
 # Build settings
