--- a/_config.yml
+++ b/_config.yml
@@ -18,6 +18,6 @@ minima:
     - title: "Home"
       url: "/"
     - title: "About"
-      url: "/about/"
+      url: "/ufc-judging-analysis"
     - title: "Blog"
-      url: "/blog/"
+      url: "/nba-ticket-pricing"
