--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-[Home](nba-ticket-pricing.html) | [About](about.html) | [Resume](resume.html)
+[Home](nba-ticket-pricing.html) | [About](ufc-judging-analysis.html)
 
 ---
 
