--- a/_config.yml
+++ b/_config.yml
@@ -6,5 +6,5 @@ author:
 description: "Personal project portfolio"
 
 # Build settings
-theme: jekyll-theme-minimal
+theme: jekyll-theme-minima
 #remote_theme: jekyll/minima
