--- a/_config.yml
+++ b/_config.yml
@@ -6,5 +6,8 @@ author:
 description: "Personal project portfolio"
 
 # Build settings
-theme: jekyll-theme-minima
-#remote_theme: jekyll/minima
+#theme: jekyll-theme-minima
+remote_theme: pages-themes/slate@v0.2.0
+plugins:
+  - jekyll-remote-theme
+
