--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: "Personal project portfolio"
 
 # Build settings
 #theme: jekyll-theme-minima
-remote_theme: pages-themes/slate@v0.2.0
+remote_theme: pages-themes/architect
 plugins:
   - jekyll-remote-theme
 
