--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,9 @@ description: "Personal project portfolio"
 
 # Build settings
 #theme: jekyll-theme-minima
-remote_theme: jekyll/minima
-plugins:
-  - jekyll-remote-theme
+#remote_theme: jekyll/minima
+#plugins:
+#  - jekyll-remote-theme
+theme: minima
+
 
