--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,13 @@
 # Site settings
-title: "Ryan O'Connell's Projects"
-author:
-  name: "Ryan O'Connell"
-  email: ryan.m.oconnell@outlook.com
-description: "Personal project portfolio"
+title: Ryan O'Connell
+description: My personal site
+author: oconnellryan
 
-
-remote_theme: jekyll/minima
+theme: minima
 
 plugins:
   - jekyll-feed
   - jekyll-seo-tag
+
 
 
