--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Ryan O'Connell
-description: My personal site
-author: oconnellryan
+description: ""
+author: ""
 
 theme: minima
 
