--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,6 @@ plugins:
 minima:
   nav_pages:
     - platforms/index.md
-    - platforms/research.md
+    - research/index.md
     - gallery.md
     - resume.md
